@@ -2617,6 +2617,7 @@ DRIVERNV(spacecty)      //09/79 Space City
 DRIVERNV(firemntn)      //01/80 Fire Mountain
 DRIVERNV(stargod)       //05/80 Star God
 DRIVERNV(stargoda)      //      Star God (alternate sound)
+DRIVERNV(stargodb)      //      Star God (alternate version)
 DRIVERNV(sshtlzac)      //09/80 Space Shuttle
 DRIVERNV(ewf)           //04/81 Earth, Wind & Fire
 DRIVERNV(locomotn)      //09/81 Locomotion
